--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,10 @@
     display: block;
 }
 
+.completed {
+    background-color: #802828;
+}
+
 header,
 footer {
     background-color: #28802c;
@@ -94,17 +98,13 @@ section button:hover {
     cursor: pointer;
 }
 
-section a {
+section span {
     background-color: #624c4c;
     color: #fff;
     padding: 1rem;
     text-decoration: none;
     display: block;
     margin: 1rem;
-}
-
-section a[href] {
-    background-color: #802828;
 }
 
 footer {
@@ -141,6 +141,7 @@ footer {
         display: flex;
         justify-content: space-evenly;
     }
+
     section:last-child {
         flex: 100%;
     }
