adjusted course formatting to be responsive

--- a/styles/main.css
+++ b/styles/main.css
@@ -142,6 +142,10 @@ footer {
         justify-content: space-evenly;
     }
 
+    section span {
+        display: inherit;
+    }
+
     section:last-child {
         flex: 100%;
     }
