--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -45,15 +45,19 @@ footer {
     width: 100%;
     background-color: var(--primary-color);
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+header div h1 {
+    margin: 0;
+    display: inline;
 }
 
 nav {
-    flex: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    margin: 1rem 0;
 }
 
 nav a {
@@ -78,12 +82,10 @@ main {
 
     nav {
         flex-direction: row;
-        background-color: var(--secondary-color);
     }
 
     nav a {
         display: block;
         border-radius: 1rem;
-        color: var(--text-secondary-color);
     }
 }
