--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -28,12 +28,12 @@
     content: "☰";
 }
 
-#navButton:hover {
-    cursor: pointer;
-}
-
 .open #navButton::before {
     content: "X";
+}
+
+#navButton:hover {
+    cursor: pointer;
 }
 
 .open a {
@@ -46,6 +46,7 @@ footer {
     background-color: var(--primary-color);
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header div h1 {
@@ -54,6 +55,7 @@ header div h1 {
 }
 
 nav {
+    flex: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -76,6 +78,10 @@ main {
 }
 
 @media screen and (min-width: 500px) {
+    header {
+        flex-wrap: nowrap;
+    }
+    
     #navButton {
         display: none;
     }
