--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -77,13 +77,15 @@ main {
     margin: 1rem 1rem;
     display: grid;
     grid-template-columns: auto auto auto;
+    
     justify-content: center;
 }
 
 main section {
     width: 25rem;
-    border: 1px solid black;
     text-align: center;
+    margin: 1rem;
+    box-shadow: 0px 2px 5px #000;
 }
 
 main section img {
