adjusted how to find the member area

--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -73,7 +73,7 @@ nav a {
     text-decoration: underline;
 }
 
-main div {
+#memberArea {
     margin: 1rem 1rem;
     display: grid;
     grid-template-columns: auto auto auto;
