corrected some html warnings

--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -83,22 +83,53 @@ main {
     margin: 2rem auto;
 }
 
-#memberArea {
-    margin: 1rem 1rem;
+.grid {
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: auto auto auto;
     justify-content: center;
 }
 
-main section {
-    width: 25rem;
+.grid div {
     text-align: center;
     margin: 1rem;
-    box-shadow: 0px 2px 5px #000;
+    padding: 1rem;
+    box-shadow: 0px 2px 5px var(--secondary-color);
 }
 
-main section img {
+.grid div img {
     width: 20rem;
+}
+
+.grid div .memberName {
+    display: none;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+}
+
+.list div img {
+    display: none;
+}
+
+.list div .memberName {
+    display: block;
+}
+
+.list div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    box-shadow: none;
+    justify-content: center;
+}
+
+.list div:nth-child(even) {
+    background-color: var(--secondary-color);
+}
+
+.list div:nth-child(even) > * {
+    color: var(--text-secondary-color);
 }
 
 main div button {
@@ -113,27 +144,11 @@ main div button:hover {
     box-shadow: 0px 0px 1px 1px inset var(--secondary-color);
 }
 
-table {
-    border: none;
-}
-
-tr:nth-child(even) {
-    background-color: var(--secondary-color);
-}
-
-tr:nth-child(even) td, tr:nth-child(even) td a {
-    color: var(--text-secondary-color);
-}
-
-td {
-    padding: 1rem;
-}
-
 @media screen and (min-width: 500px) {
     header {
         flex-wrap: nowrap;
     }
-    
+
     #navButton {
         display: none;
     }
@@ -147,9 +162,13 @@ td {
         border-radius: 1rem;
         transition: 500ms;
     }
-    
+
     nav a:hover {
         background-color: var(--secondary-color);
         color: var(--text-secondary-color);
+    }
+
+    .grid {
+        grid-template-columns: 1fr 1fr 1fr
     }
 }
