--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -89,11 +89,16 @@ main {
     justify-content: center;
 }
 
-.grid div {
+.grid div, .grid section {
     text-align: center;
     margin: 1rem;
     padding: 1rem;
     box-shadow: 0px 2px 5px var(--secondary-color);
+}
+
+.grid section h3 {
+    text-align: left;
+    background-color: var(--primary-color);
 }
 
 .grid div img {
@@ -144,6 +149,23 @@ main div button:hover {
     box-shadow: 0px 0px 1px 1px inset var(--secondary-color);
 }
 
+#priorityMembers {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+#priorityMembers div img  {
+    width: 20rem;
+}
+
+#priorityMembers div h3 {
+    width: 100%;
+    background-color: var(--primary-color);
+    border-bottom: solid 1px black;
+    padding: 1rem;
+}
+
 @media screen and (min-width: 500px) {
     header {
         flex-wrap: nowrap;
@@ -170,5 +192,9 @@ main div button:hover {
 
     .grid {
         grid-template-columns: 1fr 1fr 1fr
+    }
+
+    #priorityMembers {
+        flex-direction: row;
     }
 }
