--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -96,6 +96,10 @@ main {
     box-shadow: 0px 2px 5px var(--secondary-color);
 }
 
+.grid section {
+    padding: 0;
+}
+
 .grid section h3 {
     text-align: left;
     background-color: var(--primary-color);
