--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -100,6 +100,10 @@ main {
     padding: 0;
 }
 
+.grid section img {
+    float: left;
+}
+
 .grid section h3 {
     text-align: left;
     background-color: var(--primary-color);
