--- a/styles/main.css
+++ b/styles/main.css
@@ -113,6 +113,34 @@ section span {
     text-decoration: none;
     display: block;
     margin: 1rem;
+    cursor: pointer;
+}
+
+dialog {
+    border: 1px solid #000;
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 0px 0px 3rem #000;
+    width: 90%;
+    max-width: 600px;
+    margin: auto;
+}
+
+::backdrop {
+    background-color: #624c4cdb;
+}
+
+dialog button {
+    position: absolute;
+    top: 23px;
+    right: 23px;
+    padding: .5rem 1rem;
+    border: 1px solid #000;
+    border-radius: 0.25rem;
+}
+
+dialog h2 {
+    width: auto;
 }
 
 footer {
