--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -234,6 +234,8 @@ input[type="submit"]:hover, .openButton:hover, .closeButton:hover {
 
 #memberInfo {
     text-align: left;
+    width: 20%;
+    margin: 1rem auto;
 }
 
 @keyframes fadeIn {
