--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -3,7 +3,25 @@
     --secondary-color: #922a0b;
 }
 
-header, footer {
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+header,
+footer {
     background-color: var(--primary-color);
     color: #fff;
+    padding: 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Nanum Gothic', 'Lato', Arial, Helvetica, serif;
 }
