--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -33,6 +33,17 @@
 }
 
 /* class format */
+.tile {
+    margin: 1rem;
+    box-shadow: 0px 0px 3px 2px var(--secondary-color);
+    padding: 1rem;
+    border-radius: 1rem;
+    cursor: pointer;
+}
+.tile:hover {
+    box-shadow: inset 0px 0px 3px 2px var(--primary-color);
+}
+
 /* tag formatting */
 header,
 footer {
