--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -44,6 +44,12 @@
     box-shadow: inset 0px 0px 3px 2px var(--primary-color);
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+
 /* tag formatting */
 header,
 footer {
@@ -85,11 +91,6 @@ h4,
 h5,
 h6 {
     font-family: 'Nanum Gothic', 'Lato', Arial, Helvetica, serif;
-}
-
-main {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
 }
 
 footer {
