--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -33,6 +33,14 @@
 }
 
 /* class format */
+.open #navbutton::before {
+    content: "X";
+}
+
+.open a {
+    display: block;
+}
+
 .tile {
     margin: 1rem;
     box-shadow: 0px 0px 3px 2px var(--secondary-color);
@@ -47,12 +55,12 @@
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
 }
 
 .flex {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
 }
 
 .flex div, form{
@@ -79,7 +87,8 @@ nav {
     padding: 1rem;
     display: flex;
     justify-content: space-evenly;
-
+    flex-direction: column;
+    animation: fade-in 0.5s;
 }
 
 nav a {
@@ -88,6 +97,7 @@ nav a {
     padding: 1rem;
     border-radius: 1rem;
     transition: 0.5s;
+    display: none;
 }
 
 nav a:hover {
@@ -108,6 +118,45 @@ main {
     margin: 1rem;
 }
 
+ul {
+    width: 25%;
+    margin: 0 auto;
+}
+
+li {
+    margin: 1rem;
+    cursor: pointer;
+    border-bottom: 1px solid var(--primary-color);
+    transition: 0.5s;
+}
+
+li:hover {
+   border-bottom: 1px solid var(--secondary-color);
+}
+
+dialog {
+    margin: auto;
+    border: none;
+    background: none;
+    animation: fade-in 0.5s;
+}
+
+dialog button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 2rem;
+}
+
+dialog button:hover {
+    background-color: var(--secondary-color);
+}
+
+dialog img {
+    width: 50%;
+    margin: 0 auto;
+}
+
 input,
 select,
 textarea {
@@ -117,7 +166,7 @@ textarea {
 }
 
 input[type="submit"],
-select {
+select, button {
     border: none;
     background: none;
     background-color: var(--primary-color);
@@ -128,11 +177,55 @@ select {
     transition: 0.5s;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover, button {
     background-color: var(--secondary-color);
 }
 
 footer {
     margin-top: 1rem;
     padding: 1rem;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    25% {
+        opacity: 0.25;
+    }
+    
+    50% {
+        opacity: 0.5;
+    }
+
+    75% {
+        opacity: 0.75;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    #navButton {
+        display: none;
+    }
+
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .flex {
+        flex-direction: row;
+    }
+    
+    nav {
+        flex-direction: row;
+    }
+
+    nav a {
+        display: block;
+    }
 }
